--- a/CHECKPOINT-2/estilo.css
+++ b/CHECKPOINT-2/estilo.css
@@ -72,8 +72,9 @@ header nav ul li a:hover{
 /*SlideShow*/
 
 .slideshow{
-    position: relative;
-    left: 280px;
+    position:relative;
+    left: 25%;
+    max-width: 70%;
 }
 
 .slideshow img{
@@ -84,16 +85,19 @@ header nav ul li a:hover{
 /*Menu Pagina*/
 
 .menu-catalago{
+    position:relative;
     background-color: #7A4E48;
     width: 100%;
     height: 50px;
     border-radius: 10px 10px 0px 0px;
+    max-width: 100%;
 }
 
 .menu-catalago ul{
-    position: relative;
     top: 9px;
-    left: 35%;
+    left: 30%;
+    position: relative;
+    max-width: 60%;
 }
 
 .menu-catalago ul li{
@@ -118,10 +122,39 @@ header nav ul li a:hover{
     background-color: #d1c6c6;
     border: #d1c6c6 solid 7px;
     width: 99%;
-    height: 400px;
+    height: auto;
     margin-top: 10px;
     border-radius: 0px 0px 10px 10px;
     
+}
+
+.catalago table tbody{
+    display: inline-flex;
+}
+
+.catalago table tbody tr{
+    padding: 10px;
+}
+
+.catalago table tbody tr td{
+    display: flex;
+    flex-direction:column;
+    border: rgb(172, 170, 170) solid 4px;
+    background-color: rgb(172, 170, 170);
+    padding: 2px;
+}
+
+.nome{
+    color: aqua;
+}
+
+.preco{
+    color: #7A4E48;
+}
+
+.icon{
+    width: 140px;
+    height: 140px;
 }
 
 /*Footer*/
@@ -155,8 +188,4 @@ footer div a img{
 footer div a img:hover{
     background-color: whitesmoke;
     border-color: whitesmoke;
-}
-
-#sla{
-    
 }
