--- a/CHECKPOINT-3.0/estilo.css
+++ b/CHECKPOINT-3.0/estilo.css
@@ -205,11 +205,11 @@ footer div a img:hover{
     align-items: center;
     display: flex;
     flex-direction: column;
+    justify-content: center; /* adicionado */
     text-align: center;
-    top: 20px;
-    left: 25%;
-    position: relative;
-    width: 698px;
+    margin: 0 auto; /* adicionado */
+    width: 70%; /* alterado */
+    max-width: 698px; /* adicionado */
     height: 790px;
     background: rgb(64,11,11);
     background: -moz-linear-gradient(180deg, rgba(64,11,11,1) 36%, rgba(102,12,12,1) 65%);
@@ -219,10 +219,11 @@ footer div a img:hover{
     border-radius: 10px;
     border-color: #d1c6c6;
     border-width: 10px;
-    margin-bottom:50px ;
-    max-width: 70%;
+    margin-bottom: 50px;
     box-shadow: 0px 8px 10px black;
-}
+    left: 15%;
+
+  }
 
 #entrar{
     justify-content: center ;
